# RoboKpy

./: .gitignore  Model.py  README.md  main.py  pyproject.toml  test.py
Examples/: SingularityCheck.py
Examples/2DOF/: Circle_2dof.py  Joint_Control.py  Line_2dof.py
Examples/6DOF/: Circle_6dof.py  Joint_control.py  Line_6dof.py
Examples/Advanced/: Task2.py
Examples/Prismatic_Models/4dof_P/: Circle.py  Jnt_Control.py  xyz_Control.py
Examples/Puma561/: Crcle.py  Joint_control.py  Line.py  Pick_Place.py
Examples/SCARA/: Circle_SCARA.py  Joint_control.py  Line_SCARA.py
Examples/UR10/: Circle.py  Jnt_control.py  Line.py  P2P.py  Path.py  pick_and_place.py
Models/: Model.py
Plots/Joint_Space_Plots/: Joint_Acceleration_Plot.py  Joint_Angle_Plot.py  Joint_Velocity_Plot.py  rpy_plot.py  trajectory_plot.py  xyz_plot.py
Plots/Task_Space_Plots/: jnt_angle_plot.py  rpy_plot.py  trajetory_plot.py  xyz_acceleration_Plot.py  xyz_postion_plot.py  xyz_velocity_plot.py
Puma560/: elbow_up_down.py
Robokpy/: __init__.py  dhmodel_base.py  dhmodel_generator.py  dhmodel_loader.py  fk.py  ik.py  jacobian.py  model.py  mviz.py  plotting.py  trajectory.py  utils.py
kinematics/: Show_DH_Model.py  fk_example.py  ik_example.py  jacoban_example.py  prnt_dh_table.py  transformation_matrx.py
robokpy/: __init__.py  dhmodel_base.py  fk.py  ik.py  jacobian.py  mviz.py  trajectory.py  utils.py
tests/: test_fk.py  test_ik.py  test_jacobian.py  test_model.py  test_mviz.py  test_trajectory.py  test_utils.py
