[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "RoboKpy"
version = "1.0.0"
description = "A modular and extensible Python library for performing robotic kinematic analysis." 
readme = "README.md"

authors = [
    {name = "Silas Udofia", email = "silasudofia469@gmail.com" }
]

license = {file = "LICENSE"}

dependencies = [
    "numpy>=1.17.4",
    "matplotlib>=3.1",
    "scipy",
    "pandas"
]
requires-python = ">=3.7"

[project.urls]
Homepage = "https://github.com/Silas-U/RoboKpy"
Repository = "https://github.com/Silas-U/RoboKpy"
Issues = "https://github.com/Silas-U/RoboKpy/issues"

[tool.setuptools.packages.find]
include = ["robokpy*"]
